# flux-pam

./: .mergify.yml  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac
.github/workflows/: main.yml
config/: ax_flux_core.m4
doc/: Makefile.am  conf.py  index.rst  manpages.py
doc/man8/: index.rst  pam_flux.rst
src/pam/: Makefile.am  pam_flux.c
src/test/docker/: docker-run-checks.sh
src/test/docker/el8/: Dockerfile
src/test/docker/fedora35/: Dockerfile
src/test/docker/fedora38/: Dockerfile
src/test/docker/fedora40/: Dockerfile
src/test/docker/focal/: Dockerfile
t/: Makefile.am  pamtest.c  t0001-pam_flux.t
t/sharness.d/: flux-sharness.sh
